Expose Device & Gateway Global frames
Details
- Expose Gateways global frames to application server using
redis stream
- Expose Devices global frames to application server using
redis stream
